#--------------------------------------------------------------------------
# File and Version Information:
#  $Id$
#
# Description:
#  ChangeLog file for package ParCorAna
#------------------------------------------------------------------------

Package author: David A. Schneider

Please describe any modifications that you made to the package in the
reverse time order.

Tag: V00-00-20:
- add debugging statements
- add many user_parms, in particular parameters to filter based on ipimbs
- add 'debug_plot' and support to see some of the IP/G2/IF at viewerUpdate
- add forwarding functions logInfo, logDebug, etc to UserG2
- only plot the delays for which there is a nonzero count, cleans up plots
- label x-axis for plots in time, not 120hz counter
- add example config file for ffb live & plotting
	
Tag: V00-00-19:
- fix bug in viewerFormNDArrays. After gathering data from all the workers, the
  starting offset of each worker was not calculated properly - all but the first had 
  the same offset. The unit tests were passing because I never tested against multiple
  workers. The unit tests now using both multiple servers and multiple workers.

Tag: V00-00-18:
- fix bug with using a different base for forming delays with the delay function
	
Tag: V00-00-17:
- load mask and color files as int8 and int32 respectively in case they are float
- add error checking on mask/color/finecolor, call checkParams function from defaul_config.py
- add user_params 'plot_colors' to control number of colors plotted
- add 'print_delay_curves' to get start/stop of all delay curvers on the screen

	
Tag: V00-00-16:
- previous fix for mult servers slowed things down, server reads were not running in parrallel
- fixed this, see comments in JIRA PSAS-161 - servers now read next array after reporting ready,
  assumption is master will probably pick a different server to scatter
- added print of EventData, added class ScatterDataQueue
  
	
Tag: V00-00-15: