@@ -1,0 +1,13 @@
+#!@PYTHON@
+#--------------------------------------------------------------------------
+# Description:
+#   Test script for Translator/H5Output event processing
+#   
+#------------------------------------------------------------------------
+
+from ParCorAna.unitTestsWorkerData import *
+
+if __name__ == "__main__":
+    # now run the tests in unitTestsParCorAna, this routine does not return.
+    unittest.main(argv=[sys.argv[0], '-v'])
+
